 b=429915, color mismatch with 1x1 images (SetColor API broken) ; r=stuart, a=damon